--- a/Aula04-JSON/index.html
+++ b/Aula04-JSON/index.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 04 - JSON</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <button onclick="lerJSON()">Ler Dados</button>
+    <br><br>
     <div id="divJSON"></div>
+
+    <hr>
+
+    <input type="text" id="txtNome" placeholder="Nome" />
+    <br><br>
+    <input type="text" id="txtPreco" placeholder="Preço" />
+    <br><br><br>
+    <button onclick="salvar()">Add Produto</button>
+
+    <hr>
+
+    <button onclick="consultar()">Consultar</button>
+    <br><br>
+    <div id="divProdutos"></div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
