--- a/Aula05-XML/index.html
+++ b/Aula05-XML/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aula05 - XML</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <h1>Lista de Cliente</h1>
 
-    <table id="tabelaCliente" border="1"></table>
-    <br /><br />
-    <button onclick="lerXML()">Ler Dados XML</button>
-    <script src="script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Aula05 - XML</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <h1>Lista de Cliente</h1>
+
+  <!-- Tabela para clientes do XML estático -->
+  <table id="tabelaXML" border="1"></table>
+  <br /><br />
+  <button onclick="lerXML()">Ler Dados XML</button>
+
+  <br /><br />
+
+  <!-- Tabela para clientes do PHP (dinâmico) -->
+  <button onclick="lerClientes()">Ler Clientes</button>
+  <table id="tabelaCliente" border="1"></table>
+
+  <script src="script.js"></script>
+</body>
+
 </html>
